<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".UserInterface.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <EditText
        android:layout_marginTop="150dp"
        android:id="@+id/username"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:paddingLeft="24dp"
        android:background="@drawable/details_input_field"
        android:fontFamily="@font/caramella_regular"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:paddingLeft="24dp"
        android:background="@drawable/details_input_field"
        android:fontFamily="@font/caramella_regular"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:paddingLeft="24dp"
        android:background="@drawable/details_input_field"
        android:fontFamily="@font/caramella_regular"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:paddingLeft="24dp"
        android:background="@drawable/details_input_field"
        android:fontFamily="@font/caramella_regular"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:background="@drawable/signup_box"
        android:fontFamily="@font/quenda_medium"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/caramella_regular"
        android:text="@string/terms"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.508" />
    </LinearLayout>
</ScrollView>
