<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/details_input_field"
        android:fontFamily="@font/caramella_regular"
        android:hint="Username"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"
        android:paddingLeft="24dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="24dp"
        android:background="@drawable/details_input_field"
        android:fontFamily="@font/caramella_regular"
        android:hint="Password"
        android:inputType="textPersonName|textPassword"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
    <Button
        android:id="@+id/login"
        android:layout_width="86dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_marginLeft="45dp"
        android:background="@drawable/login_box"
        android:fontFamily="@font/quenda_medium"
        android:text="@string/login"
        android:layout_weight="0.5"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <Button
        android:id="@+id/forgetPassword"
        style="?android:attr/borderlessButtonStyle"
        android:fontFamily="@font/quenda_medium"
        android:text="@string/forget_pass"
        android:gravity="center"
        android:layout_weight="0.5"
        android:layout_marginLeft="30dp"
        android:layout_height="45dp"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>
</LinearLayout>
    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quenda_medium"
        android:text="@string/remember_me"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"

        android:theme="@style/MyCheckBox"
/>

</LinearLayout>
</ScrollView>